--- a/expense-tracker-full-stack/package.json
+++ b/expense-tracker-full-stack/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
